# q2

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml  rust-toolchain.toml
.beads/: .gitignore  config.yaml  issues.jsonl  last-touched
.cargo/: config.toml
.claude/: FRONTEND_BLUEPRINT.md  blackboard.md  patterns.md  settings.json
.claude/ATT/: README.md  agent-coordination-mcp-spec.md  anti-skim-agent-spec.md  autoattended-orchestrator-spec.md
.claude/EN/: CLAUDE-AGENT-PATTERN.md  README.md
.claude/hooks/: log-bash.sh
.claude/knowledge/: chess-nars-vertical-slice.md  positioning-quarto-4d.md
.claude/notes/: semiring-simplification.md
.claude/plans/: 2026-04-21-shader-dto-wiring.md  2026-05-06-phase2-real-engine.md
.claude/prompts/: CINEMATIC_FLYTHROUGH.md  HYDRATION_SHOWOFFS.md  JITSON_MIGRATION_AND_FEATURES.md  NEURAL_CAUSALITY_VIZ.md  PREP_DUAL_PATH.md  REASONING_PLAYBACK.md  SHIP.md  TRANSCODE.md  VISION.md  VIZ_ENGINE_V8.md  WIRE_LANCE_GRAPH.md  WIRE_ORCHESTRATOR.md
.claude/reference/aiwar/: CHESS_HARVEST_PLAN.md  Cargo.toml  INTEGRATION_PLAN_SCHEMA_CHANGES.md  WHAT_THIS_IS.md  chess_model.rs  example_enrichment.cypher  ingest.rs  main.rs  model.rs  schema.json
.claude/rules/: architectural-compliance.md  borrow-strategy.md  cross-platform.md  xtask.md
.github/workflows/: hub-client-e2e.yml  test-suite.yml  ts-test-suite.yml
claude-notes/designs/: lua-wasm.md
claude-notes/instructions/: coding.md  testing.md  windows-dev.md
claude-notes/investigations/: 2026-03-16-investigate-extension-path-resolution.md
claude-notes/plans/: 2026-01-27-hub-client-testing-infrastructure.md  2026-02-16-project-metadata-merging.md  2026-02-17-dir-metadata-path-resolution.md  2026-02-17-metadata-yml-support.md  2026-02-17-quarto-test-infrastructure.md  2026-02-18-wasm-project-context.md  2026-02-19-wasm-smoke-all-tests.md  2026-02-24-oauth2-middleware-design.md  2026-02-25-merge-react-renderer.md  2026-02-26-empty-slides-crash.md  2026-02-26-httponly-cookie-auth.md  2026-02-26-slide-thumbnails-conditional.md  2026-03-02-document-access-logging.md  2026-03-03-hub-no-local-watch.md  2026-03-03-hub-sync-missing-docs.md  2026-03-07-hub-client-render-qmd-switch.md  2026-03-07-runtime-metadata-layer.md  2026-03-09-css-in-pipeline-a-core.md  2026-03-09-css-in-pipeline-b1-migration.md  2026-03-09-css-in-pipeline-b2-tests.md  2026-03-09-css-in-pipeline-b3-wasm-fix.md  2026-03-09-css-in-pipeline-c-tests.md  2026-03-09-css-in-pipeline.md  2026-03-09-default-project-single-file.md  2026-03-09-metadata-merge-stage.md  2026-03-09-migrate-format-metadata-consumers.md  2026-03-09-remove-format-metadata.md  2026-03-09-runtime-cache-rust.md  2026-03-09-runtime-cache-wasm.md  2026-03-09-runtime-cache.md  2026-03-09-xtask-verify-ci-parity.md  2026-03-10-generic-oidc.md  2026-03-10-sass-cache-key-refinement.md  2026-03-10-smoke-all-playwright-e2e.md  2026-03-12-access-policy-audit-logging.md  2026-03-12-quoted-node-slides-renderer.md  2026-03-13-hub-mcp-server-design.md  2026-03-15-replay-widget.md  2026-03-16-extensions-master-plan.md  (+12 more)
cockpit/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
cockpit-prototype/: cockpit-polished.html  cockpit-tailwind.html  cockpit.css  cockpit.js  index.html  q2-cockpit-standalone.html
crates/aiwar-ingest/: Cargo.toml
crates/aiwar-ingest/src/: encounter_round.rs  lib.rs
crates/cockpit-server/: Cargo.toml
crates/cockpit-server/src/: codebook.rs  dto_bridge.rs  graph_engine.rs  main.rs  mock_driver.rs  openai.rs  scene_player.rs  shader_stream.rs  style_state.rs
crates/lua-src-wasm/: Cargo.toml
crates/lua-src-wasm/lua-5.4.8/: luaconf_wasm.h
crates/lua-src-wasm/src/: lib.rs
crates/neural-debug/: Cargo.toml
crates/neural-debug/src/: diagnosis.rs  instrument.rs  lib.rs  registry.rs  server.rs  strategy_check.rs
crates/quarto-core/: Cargo.toml
crates/quarto-core/src/: filter_resolve.rs  format.rs  lib.rs  pipeline.rs  project.rs  render.rs  render_to_file.rs  resources.rs  template.rs  transform.rs
crates/quarto-core/src/engine/jupyter/: daemon.rs
crates/quarto-core/src/extension/: discover.rs  mod.rs  read.rs  types.rs
crates/quarto-core/src/stage/: context.rs  mod.rs  pipeline.rs  traits.rs
crates/quarto-core/src/stage/stages/: apply_template.rs  ast_transforms.rs  compile_theme_css.rs  engine_execution.rs  metadata_merge.rs  mod.rs  parse_document.rs  render_html.rs  user_filters.rs
crates/quarto-core/src/transforms/: appendix.rs  callout.rs  callout_resolve.rs  footnotes.rs  metadata_normalize.rs  resource_collector.rs  sectionize.rs  shortcode_resolve.rs  title_block.rs  toc_generate.rs  toc_render.rs
crates/quarto-core/tests/: jupyter_integration.rs
crates/quarto-test/: Cargo.toml
crates/quarto-test/src/: lib.rs  runner.rs  spec.rs
crates/quarto-test/src/assertions/: css_regex.rs  file_exists.rs  file_regex.rs  html_elements.rs  mod.rs  no_errors.rs  prints_message.rs  should_error.rs
crates/stubs/: Cargo.toml  lib.rs
crates/stubs/graph-flow/: Cargo.toml
crates/stubs/graph-flow/src/: graph.rs  lib.rs  storage.rs  thinking.rs
crates/stubs/lance-graph/: Cargo.toml
crates/stubs/lance-graph/src/: lib.rs
crates/stubs/notebook-kernel/: Cargo.toml
crates/stubs/notebook-kernel/src/: lib.rs
crates/stubs/notebook-query/: Cargo.toml
crates/stubs/notebook-query/src/: analyst.rs  diagnostics.rs  hydration.rs  lib.rs  mri.rs  orchestrator.rs  osint_audit.rs  reasoning.rs  thinking.rs
crates/stubs/notebook-render/: Cargo.toml
crates/stubs/notebook-render/src/: lib.rs
crates/stubs/notebook-runtime/: Cargo.toml
crates/stubs/notebook-runtime/src/: lib.rs
crates/stubs/q2-ndarray/: Cargo.toml
crates/stubs/q2-ndarray/src/: deepnsm.rs  fallback.rs  lib.rs
docs/: AUDIT.md
hub-client/: changelog.md  index.html  package.json  playwright.config.ts  test-wasm-service.mjs  test-wasm.mjs  vite.config.ts
prototype/: index.html
test-unwind/: Cargo.toml  test.mjs
(+413 files in other folders)
