[package]
name = "cockpit-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Single-binary graph notebook cockpit — embeds UI + lance-graph + ndarray + V8 JIT"

[[bin]]
name = "q2-cockpit"
path = "src/main.rs"

[dependencies]
# Web server
axum.workspace = true
tower-http.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# SSE streaming
async-stream.workspace = true
futures-core.workspace = true

# Serialization
serde.workspace = true
serde_json = "1"

# Graph engine — lance-graph hot path via workspace (cloned at ../lance-graph)
lance-graph.workspace = true
notebook-query.workspace = true

# AIwar renderer — loads graph data into neo4j-rs, converts to vis-network JSON
aiwar-ingest = { path = "../aiwar-ingest" }

# ndarray — the real AdaWorldAPI fork (cloned at ../ndarray by Dockerfile)
q2-ndarray.workspace = true

# V8 JIT — execute JS/TS inside the binary
deno_core.workspace = true
serde_v8.workspace = true

# Embed the Vite build output into the binary
include_dir.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
planner = ["notebook-query/planner"]
orchestrator = ["notebook-query/orchestrator"]
neo4j-fallback = ["notebook-query/neo4j-fallback"]
