[package]
name = "neural-debug"
version = "0.1.0"
edition = "2021"
description = "Live function-level diagnostics — registry, probes, NaN detection, strategy self-check"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[features]
default = []
# Enable runtime instrumentation (track calls, NaN, timing)
instrument = []
# Enable MCP server endpoints
mcp = ["dep:axum", "dep:tokio"]

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt"]
optional = true
