[package]
name = "quarto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core rendering infrastructure for Quarto"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
pollster.workspace = true
serde_json.workspace = true
yaml-rust2.workspace = true
hashlink = "0.11"
pathdiff = "0.2"
sha2 = "0.10"

quarto-util.workspace = true
quarto-system-runtime.workspace = true
quarto-pandoc-types.workspace = true
quarto-source-map.workspace = true
quarto-doctemplate.workspace = true
quarto-error-reporting.workspace = true
quarto-config.workspace = true
quarto-yaml.workspace = true
quarto-ast-reconcile.workspace = true
quarto-analysis.workspace = true
quarto-sass.workspace = true
pampa.workspace = true

# Native-only dependencies (for execution engines and resource extraction)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3"
include_dir = "0.7"
which = "8"
regex = "1.12"

# Jupyter engine dependencies (native only)
runtimelib = { version = "1.4", features = ["tokio-runtime"] }
jupyter-protocol = "1.4"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "process", "fs", "net", "io-util"] }
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
