[package]
name = "aiwar-neo4j"
version = "0.1.0"
edition = "2021"
description = "AI War Cloud graph ingestor → Neo4j. Harvested from sarahciston/aiwar (GitLab)"
license = "MIT"
repository = "https://github.com/AdaWorldAPI/aiwar-neo4j-harvest"

[dependencies]
neo4rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Chess harvest dependencies
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
csv = { version = "1", optional = true }
shakmaty = { version = "0.27", optional = true }
ruci = { version = "2.1", optional = true }

[features]
default = []
embed = []              # Embed graph JSON at compile time
chess = [               # Chess database harvesting
    "dep:reqwest",
    "dep:csv",
    "dep:shakmaty",
    "dep:ruci",
]
