[package]
name = "graph-flow"
version = "0.1.0"
edition = "2021"
description = "Graph-flow execution engine — LangGraph-style DAG orchestration with channels and reducers"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
