# Notebook query engine — routes Cypher/Gremlin/SPARQL through lance-graph DataFusion
[package]
name = "notebook-query"
version = "0.1.0"
edition = "2024"

[dependencies]
lance-graph.workspace = true
bgz17.workspace = true
arrow = { version = "57", features = ["prettyprint"] }
datafusion = { version = "51", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde.workspace = true
serde_json = "1"

# Cold path: Neo4j Aura fallback (opt-in)
neo4rs = { version = "0.8", optional = true }

# Unified query planner (opt-in)
lance-graph-planner = { workspace = true, optional = true }

# Thinking orchestrator (opt-in)
graph-flow = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
neo4j-fallback = ["dep:neo4rs"]
planner = ["dep:lance-graph-planner"]
orchestrator = ["dep:graph-flow", "dep:uuid"]
